@@ -1261,15 +1261,12 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-name|this
+name|super
 operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
+name|equals
+argument_list|(
+name|o
+argument_list|)
 operator|&&
 name|this
 operator|.
