@@ -2028,15 +2028,12 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-name|this
+name|super
 operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
+name|equals
+argument_list|(
+name|o
+argument_list|)
 operator|&&
 name|this
 operator|.
@@ -2079,13 +2076,10 @@ name|hashCode
 parameter_list|()
 block|{
 return|return
-name|Float
+name|super
 operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
+name|hashCode
 argument_list|()
-argument_list|)
 operator|^
 name|slop
 operator|^
@@ -2096,8 +2090,6 @@ name|positions
 operator|.
 name|hashCode
 argument_list|()
-operator|^
-literal|0x4AC65113
 return|;
 block|}
 comment|// Breakout calculation of the termArrays hashcode
