@@ -1025,34 +1025,13 @@ parameter_list|)
 block|{
 if|if
 condition|(
-name|this
-operator|==
-name|obj
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|if
-condition|(
-operator|(
-name|obj
-operator|==
-literal|null
-operator|)
-operator|||
-operator|(
-name|obj
+operator|!
+name|super
 operator|.
-name|getClass
-argument_list|()
-operator|!=
-name|this
-operator|.
-name|getClass
-argument_list|()
-operator|)
+name|equals
+argument_list|(
+name|obj
+argument_list|)
 condition|)
 block|{
 return|return
@@ -1159,26 +1138,6 @@ block|}
 block|}
 return|return
 literal|false
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|hashCode
-specifier|public
-name|int
-name|hashCode
-parameter_list|()
-block|{
-return|return
-name|hashCode
-operator|^
-name|Float
-operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
-argument_list|()
-argument_list|)
 return|;
 block|}
 annotation|@
