@@ -914,15 +914,12 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-name|this
+name|super
 operator|.
-name|getBoost
-argument_list|()
-operator|==
-name|other
-operator|.
-name|getBoost
-argument_list|()
+name|equals
+argument_list|(
+name|o
+argument_list|)
 operator|&&
 name|this
 operator|.
@@ -936,7 +933,6 @@ name|func
 argument_list|)
 return|;
 block|}
-comment|/** Returns a hash code value for this object. */
 annotation|@
 name|Override
 DECL|method|hashCode
@@ -946,20 +942,15 @@ name|hashCode
 parameter_list|()
 block|{
 return|return
+name|super
+operator|.
+name|hashCode
+argument_list|()
+operator|^
 name|func
 operator|.
 name|hashCode
 argument_list|()
-operator|*
-literal|31
-operator|+
-name|Float
-operator|.
-name|floatToIntBits
-argument_list|(
-name|getBoost
-argument_list|()
-argument_list|)
 return|;
 block|}
 block|}
